--- a/src/_includes/rss.html
+++ b/src/_includes/rss.html
@@ -1,23 +1,23 @@
 <div class="rss-subscribe-list">
-    <a href="/feed.xml"><img
+    <a href="/feed.xml" class="pretty-button"><img
             src="../assets/silk/feed.png"
             alt=""
             height="16"
             width="16"
             class="icon">RSS feed for everything</a>
-    <a href="/blog/feed.xml"><img
+    <a href="/blog/feed.xml" class="pretty-button"><img
             src="../assets/feedicons-color/01.png"
             alt=""
             height="16"
             width="16"
             class="icon">Only blog posts</a>
-    <a href="/daily/feed.xml"><img
+    <a href="/daily/feed.xml" class="pretty-button"><img
             src="../assets/feedicons-color/16.png"
             alt=""
             height="16"
             width="16"
             class="icon">Only daily notes</a>
-    <a href="/devlog/feed.xml"><img
+    <a href="/devlog/feed.xml" class="pretty-button"><img
             src="../assets/feedicons-color/25.png"
             alt=""
             height="16"
