--- a/src/_includes/tagcloud.html
+++ b/src/_includes/tagcloud.html
@@ -21,7 +21,7 @@
 
         <li>
             {% if icon %}
-                <a href="/tags/{{ tag }}"><img
+                <a href="/tags/{{ tag }}" class="pretty-button"><img
                         src="{{icon}}"
                         alt=""
                         height="16"
