--- a/src/_layouts/dailynote.html
+++ b/src/_layouts/dailynote.html
@@ -28,10 +28,7 @@ permalink: /daily/:title
 
     <div class="post-content e-content" itemprop="articleBody">{{ content }}</div>
 
-    <a
-        class="u-url"
-        href="{{ page.url | relative_url }}"
-        hidden></a>
+    <a href="{{ page.url | relative_url }}" hidden></a>
 
     <marquee>TODO: related notes like on Simon's TIL blog</marquee>
 </article>
