--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -2,9 +2,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- seo -%}
+    {% seo %}
     <link rel="stylesheet" href="
-              {{ "/assets/main.css" | relative_url
-              }}
-            ">{%- feed_meta -%}
+                              {{ "/assets/main.css" | relative_url
+                              }}
+                            ">{% feed_meta %}
 </head>
