--- a/src/_layouts/dailynote.html
+++ b/src/_layouts/dailynote.html
@@ -20,7 +20,7 @@ permalink: /daily/:title
                 class="dt-published"
                 datetime="{{ page.date | date_to_xmlschema }}"
                 itemprop="datePublished">
-                {%- assign date_format = site.minima.date_format | default: '%b %-d, %Y' -%}
+                {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
                 {{ page.date | date: date_format }}
             </time>
         </p>
