--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-    {%- include head.html -%}
+    {% include head.html %}
 
     <body>
-        {%- include header.html -%}
+        {% include header.html %}
 
         <main class="page-content" aria-label="Content">
-            <div class="wrapper">
-                {{ content }}
-            </div>
+            {{ content }}
         </main>
 
-        {%- include footer.html -%}
+        {% include footer.html %}
     </body>
 </html>
