--- a/src/_layouts/tag.html
+++ b/src/_layouts/tag.html
@@ -3,18 +3,18 @@
 ---
 <marquee>TODO: These tag indexes kinda SUCK</marquee>
 <ul class="post-list">
-    {%- for post in site.posts -%}
+    {% for post in site.posts %}
         {% if post.tags contains page.title %}
             <li>
-                {%- assign date_format = site.minima.date_format | default: '%b %-d, %Y' -%}
+                {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
                 <span class="post-meta">{{ post.date | date: date_format }}</span>
                 <a class="post-link" href="{{ post.url | relative_url }}">
                     <p>{{ post.title | default: '-Untitled-' }}</p>
                 </a>
-                {%- if post.description -%}
+                {% if post.description %}
                     {{ post.description }}
-                {%- endif -%}
+                {% endif %}
             </li>
         {% endif %}
-    {%- endfor -%}
+    {% endfor %}
 </ul>
