Add external links section to navbar, fix footer on mobile, create styling for project page cards, start writing easter egg HTML comments, probably a bunch more CSS changes

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -51,6 +51,28 @@ Actually being used as a sidebar currently.
                     width="16"
                     class="icon">About + Contact
             </a>
+
+            <div class="divider"><img
+                    src="../assets/silk/page_white_go.png"
+                    alt=""
+                    height="16"
+                    width="16"
+                    class="icon">External Links</div>
+
+            <a class="header-item" href="https://wiki.realja.me"><img
+                    src="../assets/icons/rbx-legacydocs.ico"
+                    alt=""
+                    height="16"
+                    width="16"
+                    class="icon">RBX Legacy Docs
+            </a>
+            <a class="header-item" href="https://textarea.site"><img
+                    src="../assets/icons/textarea.ico"
+                    alt=""
+                    height="16"
+                    width="16"
+                    class="icon">textarea.site
+            </a>
         </nav>
     {% endif %}
 </header>
