--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -2,11 +2,16 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
     {% include head.html %}
 
-    <body>
+        <body>
+        <!-- man its been over a week working on this site redesign. i am so tired but it was worth it -realjame -->
+        <!-- hi if youre reading this -->
+        <!-- there are more comments on various pages have fun -->
+        <!-- but like its inside the main/article wrappers and stuff -->
+        <!-- https://realja.me/bloxycola.jpg -->
+
         {% include header.html %}
 
-        <main class="page-content" aria-label="Content">
-            {{ content }}
+            <main class="page-content" aria-label="Content"> {{ content }}
         </main>
 
         {% include footer.html %}
