--- a/src/_sass/realjame.scss
+++ b/src/_sass/realjame.scss
@@ -40,13 +40,13 @@
 	font-display: swap;
 }
 
-@font-face {
-	font-family: "Basilea";
-	src: url("/assets/fonts/Basilea/Basilea.ttf");
-	font-weight: normal;
-	font-style: normal;
-	font-display: swap;
-}
+// @font-face {
+// 	font-family: "Basilea";
+// 	src: url("/assets/fonts/Basilea/Basilea.ttf");
+// 	font-weight: normal;
+// 	font-style: normal;
+// 	font-display: swap;
+// }
 
 // Define defaults for each variable.
 
@@ -56,7 +56,7 @@ $base-font-weight: 400 !default;
 $small-font-size: $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit: 30px !default;
+// $spacing-unit: 30px !default;
 
 $text-color: #cafffa !default;
 $text-color-light: #24413d !default;
