--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -482,3 +482,20 @@
 		box-shadow: 0 0 15px #ffe1ad;
 	}
 }
+
+.callout {
+	overflow: hidden;
+	border-style: solid;
+	border-color: rgba(2, 122, 255, 0.25);
+	border-width: 0px;
+	border-radius: 4px;
+	margin: 1em 0;
+	mix-blend-mode: lighten;
+	background-color: rgba(2, 122, 255, 0.4);
+	padding: 12px 12px 12px 24px;
+}
+
+.callout-icon {
+	width: 32px;
+	height: 32px;
+}
