--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -146,6 +146,7 @@
 	text-align: center;
 	display: flex;
 	justify-content: space-evenly;
+	flex-wrap: wrap;
 
 	@include media-query($small-screen) {
 		margin: 0;
@@ -450,17 +451,54 @@
 	margin-right: -10px;
 	padding-right: 10px;
 
-	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	@include media-query($small-screen) {
+		padding-left: 10%;
+		justify-content: space-between;
+	}
+
+	&:before {
+		content: "";
+		display: inline-block;
+		background-repeat: no-repeat;
+		width: 16px;
+		height: 16px;
+		image-rendering: pixelated;
+		background-position: center;
+		background-size: contain;
+
+		margin: 0 6px 0 0;
+		padding: 3px;
+		border-radius: 4px;
+	}
+}
+
+.card:has(.project-title) {
+	// disable hover, which it gets from grouping with .pretty-button
+	pointer-events: none;
+
+	// except for links that is
+	.project-links a {
+		pointer-events: all;
+	}
 }
 
 .card-active {
 	border-color: #b6ffb6;
 	box-shadow: 0 0 10px #b6ffb6;
 
+	.project-status:before {
+		background-image: url("/assets/silk/lightning.png");
+		// filter: drop-shadow(1px 1px 0 black) drop-shadow(-1px -1px 0 black);
+	}
+
 	.project-status {
-		color: #143014;
-		background: linear-gradient(to left, #b6ffb6 50%, #8afb8a 70%, #00000000 100%);
-		text-shadow: 0 0 5px #25e425;
+		color: #093b09;
+		background: linear-gradient(to left, #b0f3b0 50%, #349737 85%, #00000000 100%);
+		text-shadow: 0 0 5px #00ff00;
 	}
 
 	&:hover {
@@ -472,10 +510,14 @@
 	border-color: #ffe1ad;
 	box-shadow: 0 0 10px #ffe1ad;
 
+	.project-status:before {
+		background-image: url("/assets/silk/hourglass_delete.png");
+	}
+
 	.project-status {
 		color: #143014;
-		background: linear-gradient(to left, #ffe1ad 50%, #ffd58e 70%, #00000000 100%);
-		text-shadow: 0 0 5px #e09920;
+		background: linear-gradient(to left, #ffe1ad 50%, #ffd58e 85%, #00000000 100%);
+		text-shadow: 0 0 5px #ffa200;
 	}
 
 	&:hover {
@@ -483,19 +525,101 @@
 	}
 }
 
+.card-complete {
+	border-color: $accent-color;
+	box-shadow: 0 0 10px $accent-color;
+
+	.project-status:before {
+		background-image: url("/assets/silk/tick.png");
+	}
+
+	.project-status {
+		color: #13222f;
+		background: linear-gradient(to left, $accent-color 50%, #7ac2ffff 85%, #006ecb00 100%);
+		text-shadow: 0 0 5px #2d93ec;
+	}
+
+	&:hover {
+		box-shadow: 0 0 15px #2d93ec;
+	}
+}
+
+/**
+ * Callouts
+ * A remake of the Obsidian feature https://help.obsidian.md/Editing+and+formatting/Callouts
+ */
+
 .callout {
 	overflow: hidden;
 	border-style: solid;
-	border-color: rgba(2, 122, 255, 0.25);
+	// border-color: rgba(2, 122, 255, 0.25);
 	border-width: 0px;
 	border-radius: 4px;
 	margin: 1em 0;
-	mix-blend-mode: lighten;
-	background-color: rgba(2, 122, 255, 0.4);
+	background-color: #29446c;
 	padding: 12px 12px 12px 24px;
+}
+
+.callout-title {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	font-size: 1.5em;
 }
 
 .callout-icon {
 	width: 32px;
 	height: 32px;
+	margin: 0;
+}
+
+.callout-title-inner {
+	font-weight: bold;
+}
+
+.callout-content {
+	overflow-x: auto;
+	padding: 0;
+
+	p {
+		margin-block-start: 1rem;
+		margin-block-end: 1rem;
+	}
+}
+
+.callout-note,
+.callout-info,
+.callout-todo {
+	background-color: #29446c;
+}
+
+.callout-summary,
+.callout-tip {
+	background-color: #53dfdd;
+}
+
+.callout-success {
+	background-color: #44cfd2;
+}
+
+.callout-question {
+	background-color: #e0de71;
+}
+
+.callout-warning {
+	background-color: #e9973f;
+}
+
+.callout-failure,
+.callout-danger,
+.callout-bug {
+	background-color: #fb464c;
+}
+
+.callout-example {
+	background-color: #a882ff;
+}
+
+.callout-quote {
+	background-color: #9e9e9e;
 }
