--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,5 +1,18 @@
 {% comment %}
 Actually being used as a sidebar currently.
+
+Check out these "NEW" gif icons:
+<img
+src="/assets/silk/new.png"
+height="16"
+width="16"
+class="icon">
+<img
+src="/assets/icons/new.gif"
+height="18"
+width="35"
+class="icon"
+style="width: auto; height: auto;">
 {% endcomment %}
 
 <header class="site-header" role="banner">
@@ -9,60 +22,60 @@ Actually being used as a sidebar currently.
     {% if page_paths %}
         <nav class="site-nav">
             <a class="header-item" href="/"><img
-                    src="../assets/silk/house.png"
+                    src="/assets/silk/house.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">
+                    class="icon">
                 Home
             </a>
             <a class="header-item" href="/blog"><img
-                    src="../assets/feedicons-color/01.png"
+                    src="/assets/feedicons-color/01.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">Blog
+                    class="icon">Blog
             </a>
-            <a class="header-item" href="/daily"><img
-                    src="../assets/feedicons-color/16.png"
+            <a class="header-item" href="/dailynote"><img
+                    src="/assets/feedicons-color/16.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">Daily Notes
+                    class="icon">Daily Notes
             </a>
             <a class="header-item" href="/devlog"><img
-                    src="../assets/feedicons-color/25.png"
+                    src="/assets/feedicons-color/25.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">Devlogs
+                    class="icon">Devlogs
             </a>
             <a class="header-item" href="/projects"><img
-                    src="../assets/silk/bricks.png"
+                    src="/assets/silk/bricks.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">Projects
+                    class="icon">Projects
             </a>
             <a class="header-item" href="/contact"><img
-                    src="../assets/silk/vcard.png"
+                    src="/assets/silk/vcard.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">About + Contact
+                    class="icon">About + Contact
             </a>
 
             <div class="divider"><img
-                    src="../assets/silk/page_white_go.png"
+                    src="/assets/silk/page_white_go.png"
                     height="16"
                     width="16"
-                    class="icon header-icon">External Links</div>
+                    class="icon">External Links</div>
 
             <a class="header-item" href="https://wiki.realja.me"><img
-                    src="../assets/icons/rbxlegacydocs.ico"
+                    src="/assets/icons/rbxlegacydocs.ico"
                     height="16"
                     width="16"
-                    class="icon header-icon">RBX Legacy Docs
+                    class="icon">RBX Legacy Docs
             </a>
             <a class="header-item" href="https://textarea.site"><img
-                    src="../assets/icons/textarea.ico"
+                    src="/assets/icons/textarea.ico"
                     height="16"
                     width="16"
-                    class="icon header-icon">textarea.site
+                    class="icon">textarea.site
             </a>
         </nav>
     {% endif %}
