--- a/src/_includes/post-list-simple.html
+++ b/src/_includes/post-list-simple.html
@@ -5,12 +5,12 @@
         <h3>
             <span class="topics">
                 {% for tag in post.tags %}
-                    <a href="/tags/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
+                    <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
                 {% endfor %}
             </span>
             <a href="{{ post.url }}">{{ post.title }}</a>
         </h3>
-        <p>{{ post.excerpt }}</p>
+        {{ post.excerpt }}
         {% assign count = count | plus: 1 %}
     {% else %}
         {% break %}
