--- a/src/_includes/post-list.html
+++ b/src/_includes/post-list.html
@@ -17,13 +17,18 @@
                     {{ post.description }}
                 {% endif %}
 
-                <img
-                    src="{{ post.image }}"
-                    width="500"
-                    height="300">
+                {% if post.image %}
+                    <img
+                        src="{{ post.image }}"
+                        width="500"
+                        height="300">
+                {% else %}
+                    {{ post.excerpt }}
+                {% endif %}
+
                 <span class="topics">
                     {% for tag in post.tags %}
-                        <a href="/tags/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
+                        <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
                     {% endfor %}
                 </span>
             </li>
