--- a/src/_includes/rss.html
+++ b/src/_includes/rss.html
@@ -1,21 +1,21 @@
 <div class="rss-subscribe-list">
     <a href="/feed.xml" class="pretty-button"><img
-            src="../assets/silk/feed.png"
+            src="/assets/silk/feed.png"
             height="16"
             width="16"
             class="icon">RSS feed for everything</a>
     <a href="/blog/feed.xml" class="pretty-button"><img
-            src="../assets/feedicons-color/01.png"
+            src="/assets/feedicons-color/01.png"
             height="16"
             width="16"
             class="icon">Only blog posts</a>
-    <a href="/daily/feed.xml" class="pretty-button"><img
-            src="../assets/feedicons-color/16.png"
+    <a href="/dailynote/feed.xml" class="pretty-button"><img
+            src="/assets/feedicons-color/16.png"
             height="16"
             width="16"
             class="icon">Only daily notes</a>
     <a href="/devlog/feed.xml" class="pretty-button"><img
-            src="../assets/feedicons-color/25.png"
+            src="/assets/feedicons-color/25.png"
             height="16"
             width="16"
             class="icon">Only devlogs</a>
