--- a/src/_includes/tagcloud.html
+++ b/src/_includes/tagcloud.html
@@ -1,10 +1,18 @@
 {% assign all_tags = "" %}
 
-{% for post in site.categories[include.category] %}
-    {% for tag in post.tags %}
-        {% assign all_tags = all_tags | append: tag | append: " " %}
+{% if include.category %}
+    {% for post in site.categories[include.category] %}
+        {% for tag in post.tags %}
+            {% assign all_tags = all_tags | append: tag | append: " " %}
+        {% endfor %}
     {% endfor %}
-{% endfor %}
+{% else %}
+    {% for post in site.posts %}
+        {% for tag in post.tags %}
+            {% assign all_tags = all_tags | append: tag | append: " " %}
+        {% endfor %}
+    {% endfor %}
+{% endif %}
 
 {% assign tags_array = all_tags | split: " " | sort %}
 {% assign unique_tags = tags_array | uniq %}
@@ -18,17 +26,17 @@
             {% endif %}
         {% endfor %}
         {% assign icon = site.tagicons[tag] %}
-
-        <li>
-            {% if icon %}
-                <a href="/tags/{{ tag }}" class="pretty-button"><img
+        {% if icon %}
+            <li>
+                <a href="/_tags{% if include.category %}/{{include.category}}{% endif %}/{{ tag }}" class="pretty-button"><img
                         src="{{icon}}"
                         height="16"
                         width="16"
-                        class="icon">{% endif %}
-                {{ tag }} ·
-                <b>{{ tag_count }}</b>
-            </a>
-        </li>
+                        class="icon">
+                    {{ tag | capitalize }} ·
+                    <b>{{ tag_count }}</b>
+                </a>
+            </li>
+        {% endif %}
     {% endfor %}
 </ul>
