--- a/src/_layouts/dailynote.html
+++ b/src/_layouts/dailynote.html
@@ -1,14 +1,13 @@
 ---
 layout: default
-permalink: /daily/:title
+permalink: /dailynote/:title
 ---
 <article
     class="post h-entry"
     itemscope
     itemtype="http://schema.org/BlogPosting">
-    <marquee>TODO: the dailynote template.</marquee>
     <header class="post-header">
-        <h1 class="post-title p-name" itemprop="name headline">
+        <h1 class="post-title" itemprop="name headline">
             {{ page.title }}
         </h1>
         <p class="post-meta">
