--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -7,6 +7,9 @@ permalink: /blog/:title
     itemscope
     itemtype="http://schema.org/BlogPosting">
     <header class="post-header">
+        <h1 class="post-title" itemprop="name headline">
+            {{ page.title }}
+        </h1>
         <p class="post-meta">
             {% if page.description %}
                 <span class="post-description">"{{ page.description }}"</span>
