Finishing touches. The website should be done, I just need to add my completed resume pdf and add screenshots/images to the new blog post and daily notes.

--- a/src/_includes/buttonrow.html
+++ b/src/_includes/buttonrow.html
@@ -1,4 +1,4 @@
-<ul class="button-row">
+<div class="button-row">
     <a href="https://nick64.me"><img src="/assets/buttons/nick64.gif" alt="nick64.me"></a>
     <a href="http://razorback95.com"><img src="/assets/buttons/razorback95.gif" alt="Razorback"></a>
     <a href="https://landchad.net"><img src="/assets/buttons/landchad.gif" alt="Get a website - LandChad.net"></a>
@@ -12,4 +12,4 @@
     <a href="https://ashiecorner.xyz"><img src="/assets/buttons/ashiecorner.gif" alt="ashiecorner"></a>
     <a href="https://zencorner.xyz"><img src="/assets/buttons/zencorner.gif" alt="zencorner"></a>
     <a href="https://cadence.moe"><img src="/assets/buttons/cadence.png" alt="Cadence Now!"></a>
-</ul>
+</div>
