--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,3 +1,4 @@
+{% include buttonrow.html %}
 <footer class="site-footer">
     <a class="footer-item pretty-button" href="mailto:{{ site.email }}"><img class="icon" src="/assets/silk/email.png"> {{ site.email }}</a>
     <a
@@ -11,5 +12,4 @@
         <img class="icon" src="/assets/icons/twitter.svg">
         @real__jame
     </a>
-
 </footer>
