--- a/src/_includes/tagcloud-simple.html
+++ b/src/_includes/tagcloud-simple.html
@@ -1,40 +1,46 @@
 {% assign all_tags = "" %}
 
 {% if include.category %}
-    {% for post in site.categories[include.category] %}
-        {% for tag in post.tags %}
-            {% assign all_tags = all_tags | append: tag | append: " " %}
-        {% endfor %}
-    {% endfor %}
+    {% assign posts_to_iterate = site.categories[include.category] %}
 {% else %}
-    {% for post in site.posts %}
-        {% for tag in post.tags %}
-            {% assign all_tags = all_tags | append: tag | append: " " %}
-        {% endfor %}
-    {% endfor %}
+    {% assign posts_to_iterate = site.posts %}
 {% endif %}
+
+{% for post in posts_to_iterate %}
+    {% for tag in post.tags %}
+        {% assign all_tags = all_tags | append: tag | append: " " %}
+    {% endfor %}
+{% endfor %}
+
 
 {% assign tags_array = all_tags | split: " " | sort %}
 {% assign unique_tags = tags_array | uniq %}
+{% assign display_tags = "" %}
+
+{% for tag in unique_tags %}
+    {% assign icon = site.tagicons[tag] %}
+    {% unless icon %}
+        {% assign display_tags = display_tags | append: tag | append: " " %}
+    {% endunless %}
+{% endfor %}
+
+{% assign display_tags_array = display_tags | split: " " %}
 
 <p>
     <b>{{ include.message | default: "Browse by topic:" }}</b>
-    {% for tag in unique_tags %}
+    {% for tag in display_tags_array %}
         {% assign tag_count = 0 %}
         {% for t in tags_array %}
             {% if t == tag %}
                 {% assign tag_count = tag_count | plus: 1 %}
             {% endif %}
         {% endfor %}
-        {% assign icon = site.tagicons[tag] %}
-        {% unless icon %}
-            <a href="/_tags{% if include.category %}/{{include.category}}{% endif %}/{{ tag }}">{{ tag }}</a>
-            <b>{{ tag_count }}
-            </b>
-            {% if tag != unique_tags.last %}
-                ·
-            {% endif %}
-        {% endunless %}
 
+        <a href="/_tags{% if include.category %}/{{include.category}}{% endif %}/{{ tag }}">{{ tag }}</a>
+        <b>{{ tag_count }}</b>
+
+        {% if tag != display_tags_array.last %}
+            ·
+        {% endif %}
     {% endfor %}
 </p>
