--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -58,6 +58,11 @@ h2,
 	text-shadow: 0 0 12px #2d93ec;
 }
 
+p {
+	margin-block-start: 0.75em;
+	margin-block-end: 0.75em;
+}
+
 /**
  * `main` element
  */
@@ -78,6 +83,7 @@ img {
 		max-width: 45%;
 	}
 }
+div
 
 /**
  * Videos
@@ -255,7 +261,6 @@ table {
 	thead,
 	th {
 		background: linear-gradient(to bottom, #36414b 50%, rgb(49, 78, 105) 100%);
-		// color: #13222f;
 		text-shadow: 0 0 6px #2d93ec;
 		font-size: 1.2em;
 
