--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -2,11 +2,7 @@
  * Site header
  */
 .site-header {
-	// min-height: $spacing-unit * 1.865;
-
-	// Positioning context for the mobile navigation icon
 	position: fixed;
-	// margin-top: 1em;
 	left: 0;
 	top: 0;
 	height: 100%;
@@ -21,7 +17,6 @@
 }
 
 .page-title {
-	// border-radius: 10px 10px 0 0;
 	border: solid $border-color $border-size;
 	background: none;
 	background-color: $title-background-color;
@@ -115,6 +110,15 @@
 /**
  * Site footer
  */
+body .button-row {
+	text-align: center;
+	margin-left: 200px;
+
+	@include media-query($small-screen) {
+		margin-left: 0;
+	}
+}
+
 .button-row {
 	text-align: center;
 	list-style: none;
@@ -162,7 +166,6 @@
 
 .footer-heading {
 	font-size: 1.125em;
-	// margin-bottom: calc($spacing-unit / 2);
 }
 
 .footer-bar {
@@ -215,7 +218,7 @@
 		width: auto;
 	}
 
-	max-width: 1000px;
+	max-width: 50em;
 }
 
 .post-list-heading {
@@ -318,9 +321,6 @@
  * Blog index
  */
 .tagcloud {
-	// border-radius: 10px;
-	// border: solid 1px;
-	// border-style: dashed;
 	margin: 0.5em;
 	margin-bottom: 1em;
 	padding: 0;
@@ -347,45 +347,6 @@
 .rss-subscribe-list a {
 	display: block;
 }
-
-// .small-entry {
-// 	// display: flex;
-// 	// height: 100%;
-// 	// justify-content: center;
-
-// 	@include media-query($small-screen) {
-// 		flex-direction: column;
-// 		padding: 0;
-// 	}
-
-// 	.stack {
-// 		width: 100%;
-// 		display: flex;
-// 		align-items: center;
-// 		flex-direction: column;
-// 		padding-right: 0.5em;
-
-// 		.post-meta {
-// 			white-space: nowrap;
-// 		}
-
-// 		.post-link {
-// 			font-size: 25px;
-// 			text-align: center;
-// 		}
-// 	}
-
-// 	img {
-// 		margin: 0;
-// 		margin-left: auto;
-// 		align-self: flex-end;
-// 		justify-self: center;
-
-// 		@include media-query($small-screen) {
-// 			min-width: 100%;
-// 		}
-// 	}
-// }
 
 .tag {
 	color: white;
@@ -644,6 +605,10 @@
 	margin: 1em auto;
 	background-color: #29446c;
 	padding: 12px 12px 12px 24px;
+
+	@include media-query($small-screen) {
+		width: 80%;
+	}
 }
 
 .callout-title {
