--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -58,6 +58,11 @@ h2,
 	text-shadow: 0 0 12px #2d93ec;
 }
 
+p {
+	margin-block-start: 0.75em;
+	margin-block-end: 0.75em;
+}
+
 /**
  * `main` element
  */
@@ -78,6 +83,7 @@ img {
 		max-width: 45%;
 	}
 }
+div
 
 /**
  * Videos
